refactor: 完善单元测试并修复 RedisUtil 安全隐患与代码规范